@@ -3,6 +3,7 @@ Release date:
 * Enhancement: Info Grid & Carousel - Added Icon Position option
 * Enhancement: Info Table - Added Icon Position option
 * Fixed: Logo Grid - Minor CSS glitch when link is added to logo
+* Fixed: Display Conditions - Deprecated code in Request Parameter condition
 
 == 2.8.3 ==
 Release date: December 24, 2024
